Add PUT endpoint for /admin
